added a lot of features

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-REDIS_HOST=
-REDIS_PORT=
-REDIS_DB=
+DB_HOST=postgres
+DB_PORT=5432
+DB_USER=test_user
+DB_PASSWORD=test_password
+DB_NAME=testdb
 
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+
+KAFKA_TOPIC=warehouse_events
+KAFKA_HOST=kafka
+KAFKA_PORT=29092
